--- a/Fitnessy/app/src/main/res/values/strings.xml
+++ b/Fitnessy/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="email">Email</string>
     <string name="password">Password\n</string>
     <string name="login">Login</string>
-    <string name="already_a_user">Already a user?</string>
-    <string name="sign_up">Sign Up</string>
+    <string name="already_a_user">Already have an account?</string>
+    <string name="sign_up">Create Account</string>
     <string name="confirm_password">Confirm Password</string>
-    <string name="forgot_your_password">Forgot your password?</string>
+    <string name="forgot_your_password">Forgot password?</string>
     <string name="not_a_user">Not a user?</string>
+    <string name="welcome_back_to_fitnessy">Welcome Back To Fitnessy!</string>
 </resources>
